--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,23 @@
 ---
 layout: default
 ---
-<div class="post">
+<section id='page'>
+  <div class='container'>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+    <header class="post-header">
+      <h1 class="post-title">{{ page.title }}</h1>
+    </header>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+    <article class="post-content">
+      {{ content }}
+    </article>
 
-</div>
+    <div class='post-footer'>
+      {% for tag in page.tags %}
+      <span class='subtext'>{{ tag }} </span>
+      {% endfor %}
+    </div>
+
+  </div>
+</section>
+
