--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,25 @@
 ---
 layout: default
 ---
-<div class="post">
+<section id='post'>
+  <div class='container'>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+    <header class="post-header">
+      <h1 class="post-title">{{ page.title }}</h1>
+      <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    </header>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+    <article class="post-content">
+      {{ content }}
+    </article>
 
-</div>
+    <div class='post-footer'>
+      {% for tag in page.tags %}
+      <span class='subtext'>{{ tag }} </span>
+      {% endfor %}
+    </div>
 
-<script src="/assets/javascript/post.js"></script>
+  </div>
+</section>
+
+
