--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -4,14 +4,12 @@
   margin-bottom: 20px;
 }
 
-#work {
-  h3 {
+.proj-title {
     font-size: 1.8em;
   }
   a {
     font-weight: 300;
   }
-}
 
 .work-screenshot {
   max-width: 461px;
