--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,9 @@
   <body>
 
     {% include nav.html %}
-
+    <div class='wrapper'>
       {{ content }}
+    </div>
 
     {% include footer.html %}
 
