--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -58,13 +58,13 @@ footer {
   height: 50px;
   p {
     margin: 0px;
-    //position: relative;
-    //top: 10px;
+    position: relative;
+    top: 10px;
   }
 }
 
 .socmedia {
-  margin-top: 20px;
+  margin-top: 15px;
   ul {
     text-align: center;
     margin: 0;
@@ -74,7 +74,6 @@ footer {
   }
   img {
     height: 25px;
-    //margin: 0px;
   }
 }
 
